feature: add teacher JWT login